updated to reflect new projects

--- a/index.html
+++ b/index.html
@@ -222,24 +222,24 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/react-logo.png" />
+              <img class="profile" src="./img/python-logo.png" />
             </div>
             <div class="subsection-body">
               <div class="info">
-                <div class="info-head"> M e d &nbsp; A p p &nbsp; J a m </div>
+                <div class="info-head"> A l f r e d </div>
                 <div class="info-detail">
 
                 </div>
                 <br />
               </div>
               <div class="subsection-p">
-                The Med AR Jam is a two-week long coding competition where students from all disciplines come together to form teams and create a fully functional and mobile medical application on the iOS or Android platform. Apps are judged on various criteria and the top teams are awarded prizes and recognition. Our theme this year is Augmented Reality (AR) in relation to health care. Your goal is to create medical applications that range from helping medical students/faculty in teaching/learning to clinical apps for use by patients or clinicians with AR.
+                Alfred is a Python-based web tool that scrapes a web page and returns resources available to the user such as downloads and event schedules.
                 <uL class="work">
                   <li>
-                    Managed fellow team members in organizational aspects and technical direction
+                    Developed front end and core functionality through use of Flask and Python respectively
                   </li>
                   <li>
-                    Lead informal meetings for team members that consisted of design discussions and informal workshops on React
+                    Researched and experimented in various additional functionality while also meeting with collaborators on the project
                   </li>
                 </uL>
               </div>
@@ -247,7 +247,32 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/python-logo.png" />
+              <img class="profile" src="./img/nba-logo.png" />
+            </div>
+            <div class="subsection-body">
+              <div class="info">
+                <div class="info-head"> T i p O f f </div>
+                <div class="info-detail">
+
+                </div>
+                <br />
+              </div>
+              <div class="subsection-p">
+                TipOff is a work in progress mobile application that will help guide and onboard users who are interested in watching NBA games.
+                <uL class="work">
+                  <li>
+                    Developing wireframe models for the various sections of the application before moving onwards to the backend.
+                  </li>
+                  <li>
+                    Currently researching best practices and libraries to utilize in the development of TipOff.
+                  </li>
+                </uL>
+              </div>
+            </div>
+          </div>
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body-image">
+              <img class="profile" src="./img/react-logo.png" />
             </div>
             <div class="subsection-body">
               <div class="info">
