linked projects to github

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/python-logo.png" />
+              <a href="https://github.com/khuongTiet/alfred"><img class="profile" src="./img/python-logo.png" /></a>
             </div>
             <div class="subsection-body">
               <div class="info">
@@ -247,7 +247,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/nba-logo.png" />
+              <a href="https://github.com/khuongTiet/tipoff"><img class="profile" src="./img/nba-logo.png" /></a>
             </div>
             <div class="subsection-body">
               <div class="info">
@@ -272,7 +272,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/react-logo.png" />
+              <a href="https://github.com/khuongTiet/track"><img class="profile" src="./img/react-logo.png" /></a>
             </div>
             <div class="subsection-body">
               <div class="info">
