removed nba logo

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <a href="https://github.com/khuongTiet/tipoff"><img class="profile" src="./img/nba-logo.png" /></a>
+              <a href="https://github.com/khuongTiet/tipoff"><img class="profile" src="./img/bball.png" /></a>
             </div>
             <div class="subsection-body">
               <div class="info">
