Added tipoff blog

--- a/tipoff.html
+++ b/tipoff.html
@@ -39,7 +39,7 @@
               <h2>Background</h2>
             </div>
           </div>
-          <div class="subsection-body-wrapper">
+          <div class="subsection-body-wrapper blog-post">
             <p>
               I had always had an interest in basketball that I believe stemmed from my youth when I would play with my friends during school.
               I feel that basketball is one of the easier sports to follow along during a play but you could easily get lost if you aren't watching a highlight.
@@ -54,12 +54,64 @@
               <h2>Development</h2>
             </div>
           </div>
-          <div class="subsection-body-wrapper">
+          <div class="subsection-body-wrapper blog-post">
             <p>
               I wanted to provide a sort of personal experience with TipOff. I want the users to have a specific goal in mind when they start using TipOff. With this
               in mind, I had decided to develop TipOff as a mobile application. Initally, I had planned to develop it as a web application that is responsive, but
-              I did not think that people would want to start learning how to watch basketball while they're sitting down on a computer.
+              I did not think that people would want to start learning how to watch basketball while they're sitting down on a computer. I had some experience developing
+              in React from my internship at the Portal but I didn't have any experience developing in React Native at all so this project was something that would really
+              test my abilities.
             </p>
+            <div class="blog-image-container">
+              <img src="./img/tipoff1.jpg" class="blog-image"/>
+              <img src="./img/tipoff2.jpg" class="blog-image"/>
+            </div>
+            <p>
+              I decided to start small and simple. It would be better to have something to start from than to worry about the details and optimizing it before it can even
+              be finished and tested on. I focused on designing a screen that would show users how the point system would work and that proved to be pretty challenging to do.
+              IMG
+              Initially, I had tried to desin the court using the basic HTML/CSS designs but due to the constraints within React Native, designing a basketball court is
+              pretty difficult in just HTML/CSS. After some researching, I had decided to try using SVGs because they would let me define a path and from that, I could
+              map out a basketball court. It was very interesting learning how to use SVG since its like using a virtual pen that is guided by coordinates and I hope
+              I could expand more on that in my future projects.
+            </p>
+            <div class="blog-image-container">
+              <img src="./img/tipoff3.jpg" class="blog-image"/>
+              <img src="./img/tipoff4.jpg" class="blog-image"/>
+            </div>
+            <p>
+              After I had the rough prototype set up, I set out on using libraries to supplement and expedite my development of the UI for the project. I used
+              Native Base by Geeky Ants in order to have a uniform UI experience across mobile device operating systems. Learning to use the components within this
+              library was a bit confusing due to the documentation not being up to date with what the actual parameters were for the components but I slowly got the hang of it.
+              Using the library really helped me take my mind off the design aspect of the project and focus more on the experience. I  began to question the placement of my
+              screens and even asked some of my friends about the placement of certain buttons.
+            </p>
+            <div class="blog-image-container">
+              <img src="./img/tipoff5.jpg" class="blog-image"/>
+              <img src="./img/tipoff6.jpg" class="blog-image"/>
+            </div>
+          </div>
+        </section>
+        <section id="development" class="subsection">
+          <div class="subsection-head">
+            <div class="subsection-name">
+              <h2>Future</h2>
+            </div>
+          </div>
+          <div class="subsection-body-wrapper blog-post">
+            <p>
+              The future of TipOff is a bit uncertain due to the fact that, in my opinion, in order for the application to be engaging I would require additional
+              assets such as logos and vector images that relate to the NBA. These, however, cannot be used for public or commercial use, so that if I were to
+              want to publish this application some day, I would have to apply for licensing to use the logos of the NBA. This was a bit of a disappointment since
+              I was really excited to share this application with the public one day, and have more people learn about and watch the NBA. I would try to see how I
+              might apply for licensing to use the logos in the application or perhaps just use free source vector images that depict basketball to get around this
+              obstacle. I definitely will come back to touch up and improve upon the functionalities of the application because it is a good learning experience and
+              practice for me in developing with React Native.
+            </p>
+            <div class="blog-image-container">
+              <img src="./img/tipoff7.jpg" class="blog-image"/>
+              <img src="./img/tipoff8.jpg" class="blog-image"/>
+            </div>
           </div>
         </section>
       </div>
